Restructured code base. Started renaming files and updating notebooks. Finished updating Notebook Main_PyEPO.ipynb.

--- a/Notebooks/Asym_SPNI.ipynb
+++ b/Notebooks/Asym_SPNI.ipynb
@@ -25,30 +25,38 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import dflintdpy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Import necessary libraries\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "import torch\n",
     "import random\n",
-    "import pyepo\n",
     "from tabulate import tabulate\n",
     "\n",
-    "from src.data.config import HP\n",
+    "from dflintdpy.data.config import HP\n",
     "\n",
-    "from src.solvers.spnia_asym import AsymmetricSPNI\n",
-    "from src.models.ShortestPathGrb import shortestPathGrb\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid\n",
-    "from src.solvers.BendersDecomposition import BendersDecomposition\n",
-    "from models.CalibrationTrainer import CalibratorTrainer\n",
+    "from dflintdpy.solvers.spnia_asym import AsymmetricSPNI\n",
+    "from dflintdpy.solvers.shortest_path_grb import ShortestPathGrb\n",
+    "from dflintdpy.models.grid import Grid\n",
+    "from dflintdpy.solvers.BendersDecomposition import BendersDecomposition\n",
     "\n",
-    "from scripts.compare_po_spo import compare_po_spo\n",
-    "from scripts.setup import gen_data, gen_train_data, setup_po_model, setup_hybrid_spo_model"
+    "from dflintdpy.scripts.compare_po_spo import compare_po_spo\n",
+    "from dflintdpy.scripts.setup import gen_data, gen_train_data, setup_po_model, setup_hybrid_spo_model"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "4",
    "metadata": {},
    "source": [
     "## Set Parameters"
@@ -57,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +110,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "8",
    "metadata": {},
    "source": [
     "## Generate Network Data\n",
@@ -112,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "source": [
     "## Predict-then-Optimize"
@@ -137,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +171,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "source": [
     "## Smart Predict-then-Optimize with OptNet"
@@ -172,7 +180,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "source": [
     "## Adverse Predict-then-Optimize with OptNet"
@@ -196,7 +204,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +214,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +225,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,21 +236,6 @@
     "    training_data_non_adverse,\n",
     "    versatile=True\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "18",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print(f\"Old SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")\n",
-    "# print(f\"log_s parameter before Calibrator fitting: {spo_model.log_s.item()}\") \n",
-    "# calibration_trainer = CalibratorTrainer(spo_model)\n",
-    "# calibration_trainer.align_scale_ols(training_data['train_loader'])\n",
-    "# print(f\"log_s parameter after Calibrator fitting:  {spo_model.log_s.item()}\")\n",
-    "# print(f\"New SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")"
    ]
   },
   {
