--- a/Notebooks/Main_PyEPO.ipynb
+++ b/Notebooks/Main_PyEPO.ipynb
@@ -10,20 +10,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add the parent directory to the path\n",
-    "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath(\"../..\"))"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "1",
    "metadata": {},
    "source": [
     "## Optimizers\n",
@@ -33,20 +21,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import numpy and ShortestPathGrb class\n",
+    "import pyepo\n",
     "import numpy as np\n",
-    "from src.models.ShortestPathGrb import shortestPathGrb\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid"
+    "from torch import optim\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "import dflintdpy\n",
+    "from dflintdpy.models.grid import Grid\n",
+    "from dflintdpy.solvers.shortest_path_grb import ShortestPathGrb\n",
+    "from dflintdpy.predictors.linear_regression import LinearRegression\n",
+    "from dflintdpy.utils.dfl_trainer import DFLTrainer\n",
+    "from dflintdpy.data.adverse.adverse_loader import AdvLoader"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,16 +51,16 @@
     "np.random.seed(42)  # for reproducibility\n",
     "\n",
     "# Create grid instance\n",
-    "grid = ShortestPathGrid(m, n)\n",
+    "grid = Grid(m, n)\n",
     "\n",
     "# Create a opt_model instance\n",
-    "opt_model = shortestPathGrb(grid)"
+    "opt_model = ShortestPathGrb(grid)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,17 +75,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solve shortest path problem\n",
-    "path, obj = opt_model.solve(versatile=True)"
+    "path, obj = opt_model.solve(visualize=True)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "source": [
     "## Datasets\n",
@@ -99,12 +95,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pyepo\n",
-    "\n",
     "# Set parameters for data generation\n",
     "num_train_data = 1000 # number of training data\n",
     "num_test_data = 1000 # number of test data\n",
@@ -126,12 +120,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# split train test data\n",
-    "from sklearn.model_selection import train_test_split\n",
     "x_train, x_test, c_train, c_test = train_test_split(\n",
     "    feats, \n",
     "    costs, \n",
@@ -143,32 +136,31 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create datasets for training and testing\n",
-    "dataset_train = pyepo.data.dataset.optDataset(opt_model, x_train, c_train)\n",
-    "dataset_test = pyepo.data.dataset.optDataset(opt_model, x_test, c_test)"
+    "dataset_train = dflintdpy.data.adverse.adverse_dataset.generate_opt_dataset(opt_model, x_train, c_train)\n",
+    "dataset_test = dflintdpy.data.adverse.adverse_dataset.generate_opt_dataset(opt_model, x_test, c_test)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Wrap dataset into PyTorch DataLoader\n",
-    "from torch.utils.data import DataLoader\n",
     "batch_size = 32\n",
-    "loader_train = DataLoader(dataset_train, batch_size=batch_size, shuffle=True)\n",
-    "loader_test = DataLoader(dataset_test, batch_size=batch_size, shuffle=False)"
+    "loader_train = AdvLoader(dataset_train, batch_size=batch_size, shuffle=True)\n",
+    "loader_test = AdvLoader(dataset_test, batch_size=batch_size, shuffle=False)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "source": [
     "## Training and Testing\n",
@@ -178,12 +170,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.models.LinearRegression import LinearRegression\n",
-    "\n",
     "# Instantiate linear regression model\n",
     "model = LinearRegression(num_feat=num_feat, num_edges=opt_model.num_cost)"
    ]
@@ -191,7 +181,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,13 +189,12 @@
     "spop = pyepo.func.SPOPlus(opt_model, processes=1)\n",
     "\n",
     "# Init optimizer\n",
-    "from torch import optim\n",
     "optimizer = optim.Adam(model.parameters(), lr=1e-2)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "source": [
     "### Train SPO+ loss\n",
@@ -215,21 +204,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.models.trainer import Trainer\n",
-    "\n",
     "# Set the number of epochs for training\n",
     "epochs = 5\n",
     "\n",
     "# Create a trainer instance\n",
-    "trainer = Trainer(pred_model=model, \n",
-    "                  opt_model=opt_model, \n",
-    "                  optimizer=optimizer, \n",
-    "                  loss_fn=spop\n",
-    "                )\n",
+    "trainer = DFLTrainer(\n",
+    "    pred_model=model, \n",
+    "    opt_model=opt_model, \n",
+    "    optimizer=optimizer, \n",
+    "    loss_fn=spop\n",
+    ")\n",
     "\n",
     "train_loss_log, train_regret_log, test_loss_log, test_regret_log = trainer.fit(loader_train, loader_test, epochs=epochs)"
    ]
@@ -237,11 +225,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
-    "Trainer.vis_learning_curve(\n",
+    "DFLTrainer.vis_learning_curve(\n",
     "    trainer,\n",
     "    train_loss_log,\n",
     "    train_regret_log,\n",
@@ -254,7 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "source": [
     "### Differentiable Black Box Trainer\n",
@@ -264,7 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +263,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +291,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -340,7 +328,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": []
