Updated all notebooks and related files to the new restructurization.

--- a/Notebooks/1_PyEPO_Integration.ipynb
+++ b/Notebooks/1_PyEPO_Integration.ipynb
@@ -296,7 +296,7 @@
    "outputs": [],
    "source": [
     "# Create a trainer instance\n",
-    "trainer = Trainer(pred_model=model, \n",
+    "trainer = DFLTrainer(pred_model=model, \n",
     "                  opt_model=opt_model, \n",
     "                  optimizer=optimizer, \n",
     "                  loss_fn=dbbl1, \n",
