--- a/Notebooks/2_Benders_Decomposition.ipynb
+++ b/Notebooks/2_Benders_Decomposition.ipynb
@@ -15,13 +15,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add the parent directory to the path\n",
-    "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath(\"../..\"))\n",
-    "\n",
     "# Import numpy and ShortestPathGrid class\n",
     "import numpy as np\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid"
+    "from dflintdpy.models.grid import Grid"
    ]
   },
   {
@@ -38,7 +34,7 @@
     "cost = np.arange((m-1)*n + m*(n-1))\n",
     "np.random.shuffle(cost)\n",
     "# Initialize the ShortestPathGrid with the cost array\n",
-    "grid = ShortestPathGrid(m, n, cost=cost)\n",
+    "grid = Grid(m, n, cost=cost)\n",
     "# Visualize the grid\n",
     "grid.visualize()"
    ]
@@ -50,11 +46,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.models.ShortestPathGrb import shortestPathGrb\n",
+    "from dflintdpy.solvers.shortest_path_grb import ShortestPathGrb\n",
     "\n",
-    "opt_model = shortestPathGrb(grid)\n",
-    "sol, obj = opt_model.solve(versatile=True)\n",
-    "# grid.visualize(colored_edges=sol)"
+    "opt_model = ShortestPathGrb(grid)\n",
+    "sol, obj = opt_model.solve(visualize=True)"
    ]
   },
   {
@@ -81,10 +76,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.solvers.BendersDecomposition import BendersDecomposition\n",
+    "from dflintdpy.solvers.symmetric_interdictor import SymmetricInterdictor\n",
     "\n",
-    "# Initialize the BendersDecomposition with the opt_model\n",
-    "benders = BendersDecomposition(opt_model, k, interdiction_cost, max_cnt=20, eps=1e-3)"
+    "# Initialize the SymmetricInterdictor with the opt_model\n",
+    "benders = SymmetricInterdictor(grid, k, interdiction_cost, max_cnt=20, eps=1e-3)"
    ]
   },
   {
