--- a/Notebooks/3_Bayrak08.ipynb
+++ b/Notebooks/3_Bayrak08.ipynb
@@ -10,20 +10,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Add the parent directory to the path\n",
-    "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath(\"../..\"))"
-   ]
-  },
-  {
    "cell_type": "markdown",
-   "id": "2",
+   "id": "1",
    "metadata": {},
    "source": [
     "## Problem Setup\n",
@@ -33,23 +21,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from src.solvers.spnia_asym import AsymmetricSPNI\n",
-    "from src.models.ShortestPathGrb import shortestPathGrb\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid\n",
-    "from src.solvers.BendersDecomposition import BendersDecomposition"
+    "from dflintdpy.solvers.asymmetric_interdictor import AsymmetricInterdictor\n",
+    "from dflintdpy.solvers.shortest_path_grb import ShortestPathGrb\n",
+    "from dflintdpy.models.grid import Grid\n",
+    "from dflintdpy.solvers.symmetric_interdictor import SymmetricInterdictor"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,8 +66,8 @@
     "est_delays = (np.random.rand(network[0] * (network[1] - 1) + (network[0] - 1) * network[1]) * 2 * (1 - Q) * true_delays + Q * true_delays).round(0)\n",
     "\n",
     "# Create the true and estimated graphs\n",
-    "true_graph = ShortestPathGrid(network[0], network[1], true_costs)\n",
-    "est_graph = ShortestPathGrid(network[0], network[1], est_costs)\n",
+    "true_graph = Grid(network[0], network[1], true_costs)\n",
+    "est_graph = Grid(network[0], network[1], est_costs)\n",
     "\n",
     "# Visualize the the graphs with true and estimated costs\n",
     "fig, ax = plt.subplots(1,2,figsize=(16, 6))\n",
@@ -90,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "source": [
     "## Naive Interdictor\n",
@@ -100,16 +88,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7",
+   "id": "6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solutions without information asymmetry\n",
-    "interdictor_I = BendersDecomposition(shortestPathGrb(true_graph), k=B, interdiction_cost=true_delays, max_cnt=20, eps=.1)\n",
+    "interdictor_I = SymmetricInterdictor(true_graph, k=B, interdiction_cost=true_delays, max_cnt=20, eps=.1)\n",
     "x_true_I, y_true_I, obj_true_I = interdictor_I.solve()\n",
     "\n",
     "# Estimated shortest path after symmetric interdiction\n",
-    "est_shortest_path = shortestPathGrb(est_graph)\n",
+    "est_shortest_path = ShortestPathGrb(est_graph)\n",
     "est_shortest_path.setObj(est_costs + x_true_I * est_delays)\n",
     "y_est_I, obj_est_I = est_shortest_path.solve()"
    ]
@@ -117,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8",
+   "id": "7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "source": [
     "## Knowledgeable Interdictor\n",
@@ -152,21 +140,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Solution for interdictor with asymmetric information\n",
-    "asym_interdictor = AsymmetricSPNI(true_graph, budget=B, true_costs=true_costs, true_delays=true_delays, est_costs=est_costs, est_delays=est_delays, lsd=1)\n",
+    "asym_interdictor = AsymmetricInterdictor(\n",
+    "    true_graph, \n",
+    "    budget=B, \n",
+    "    true_costs=true_costs, \n",
+    "    true_delays=true_delays, \n",
+    "    est_costs=est_costs, \n",
+    "    est_delays=est_delays, \n",
+    "    lsd=1\n",
+    ")\n",
     "x_true_II, obj_true_II = asym_interdictor.solve()\n",
     "\n",
     "# True shortest path after symmetric interdiction\n",
-    "true_shortest_path = shortestPathGrb(true_graph)\n",
+    "true_shortest_path = ShortestPathGrb(true_graph)\n",
     "true_shortest_path.setObj(true_costs + x_true_II * true_delays)\n",
     "y_true_II, obj_true_II = true_shortest_path.solve()\n",
     "\n",
     "# Estimated shortest path after symmetric interdiction\n",
-    "est_shortest_path = shortestPathGrb(est_graph)\n",
+    "est_shortest_path = ShortestPathGrb(est_graph)\n",
     "est_shortest_path.setObj(est_costs + x_true_II * est_delays)\n",
     "y_est_II, obj_est_II = est_shortest_path.solve()\n"
    ]
@@ -174,7 +170,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": []
