--- a/Notebooks/5_Asym_SPNI_Toy_Example.ipynb
+++ b/Notebooks/5_Asym_SPNI_Toy_Example.ipynb
@@ -15,30 +15,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Add the parent directory to the path\n",
-    "import sys, os\n",
-    "sys.path.insert(0, os.path.abspath(\"../..\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "from src.solvers.spnia_asym import AsymmetricSPNI\n",
-    "from src.models.ShortestPathGrb import shortestPathGrb\n",
-    "from src.models.ShortestPathGrid import ShortestPathGrid\n",
-    "from src.solvers.BendersDecomposition import BendersDecomposition"
+    "from dflintdpy.models.grid import Grid\n",
+    "from dflintdpy.solvers.shortest_path_grb import ShortestPathGrb\n",
+    "from dflintdpy.solvers.symmetric_interdictor import SymmetricInterdictor\n",
+    "from dflintdpy.solvers.asymmetric_interdictor import AsymmetricInterdictor"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "3",
+   "id": "2",
    "metadata": {},
    "source": [
     "### Create true and estimated network"
@@ -47,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4",
+   "id": "3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,19 +44,19 @@
     "\n",
     "# Define the graph with the true costs\n",
     "c_true = np.array([2,3,3,3])\n",
-    "grid_true = ShortestPathGrid(m=2, n=2, cost=c_true)\n",
+    "grid_true = Grid(m=2, n=2, cost=c_true)\n",
     "grid_true.visualize(ax=ax[0], title=\"True Costs\")\n",
     "\n",
     "# Define the graph with the estimated costs\n",
     "c_est = np.array([4,3,5,3])\n",
-    "grid_est = ShortestPathGrid(m=2, n=2, cost=c_est)\n",
+    "grid_est = Grid(m=2, n=2, cost=c_est)\n",
     "grid_est.visualize(ax=ax[1], title=\"Estimated Costs\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5",
+   "id": "4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,10 +68,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6",
+   "id": "5",
    "metadata": {},
    "source": [
     "### Interdictor assuming complete evader information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solve the Shortest Path Network Interdiction problem, \n",
+    "# where the interdictor assumes the evader has full information\n",
+    "symmetric_interdictor = SymmetricInterdictor(grid_true, budget, d_true)\n",
+    "x_star_I, y_star_I, obj_star_I = symmetric_interdictor.solve()"
    ]
   },
   {
@@ -93,27 +94,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solve the Shortest Path Network Interdiction problem, \n",
-    "# where the interdictor assumes the evader has full information\n",
-    "shortest_path_true = shortestPathGrb(grid_true)\n",
-    "benders_true = BendersDecomposition(shortest_path_true, budget, d_true)\n",
-    "x_star_I, y_star_I, obj_star_I = benders_true.solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Solve the true shortest path problem with the interdictions\n",
-    "shortest_path_true_I = shortestPathGrb(grid_true)\n",
+    "shortest_path_true_I = ShortestPathGrb(grid_true)\n",
     "shortest_path_true_I.setObj(shortest_path_true_I.cost + d_true * x_star_I)\n",
     "y_true_I, obj_true_I = shortest_path_true_I.solve()\n",
     "\n",
     "# Solve the estimated shortest path problem with the interdictions\n",
-    "shortest_path_est_I = shortestPathGrb(grid_est)\n",
+    "shortest_path_est_I = ShortestPathGrb(grid_est)\n",
     "shortest_path_est_I.setObj(shortest_path_est_I.cost + d_est * x_star_I)\n",
     "y_est_I, obj_est_I = shortest_path_est_I.solve()"
    ]
@@ -121,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,10 +128,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "source": [
     "### Interdictor knowing asymmetric evader information"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "10",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solve the Asymmetric Shortest Path Network Interdiction problem\n",
+    "asym_spni = AsymmetricInterdictor(grid_true, budget, c_true, d_true, c_est, d_est)\n",
+    "x_star_II, z_star_II = asym_spni.solve()"
    ]
   },
   {
@@ -154,25 +153,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Solve the Asymmetric Shortest Path Network Interdiction problem\n",
-    "asym_spni = AsymmetricSPNI(grid_true, budget, c_true, d_true, c_est, d_est)\n",
-    "x_star_II, z_star_II = asym_spni.solve()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "12",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# Solve the true shortest path problem with the interdictions\n",
-    "shortest_path_true_II = shortestPathGrb(grid_true)\n",
+    "shortest_path_true_II = ShortestPathGrb(grid_true)\n",
     "shortest_path_true_II.setObj(shortest_path_true_II.cost + d_true * x_star_II)\n",
     "y_true_II, obj_true_II = shortest_path_true_II.solve()\n",
     "\n",
     "# Solve the estimated shortest path problem with the interdictions\n",
-    "shortest_path_est_II = shortestPathGrb(grid_est)\n",
+    "shortest_path_est_II = ShortestPathGrb(grid_est)\n",
     "shortest_path_est_II.setObj(shortest_path_est_II.cost + d_est * x_star_I)\n",
     "y_est_II, obj_est_II = shortest_path_est_II.solve()"
    ]
@@ -180,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": []
