--- a/Notebooks/Robust_SPO.ipynb
+++ b/Notebooks/Robust_SPO.ipynb
@@ -52,36 +52,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Define hyperparameters\n",
-    "# B = 5\n",
-    "# network = (6, 8)\n",
-    "# random_seed = 31\n",
-    "# intd_seed = 53\n",
-    "# data_loader_seed = 17\n",
-    "\n",
-    "# # ML hyperparameters\n",
-    "# num_features = 5\n",
-    "# num_train_samples = 600\n",
-    "# validation_size = 100\n",
-    "# num_test_samples = 200\n",
-    "# data_loader_batch_size = 32\n",
-    "# po_epochs = 60\n",
-    "# spo_epochs = 20\n",
-    "# po_lr = 1e-2\n",
-    "# spo_lr = 1e-3\n",
-    "# lam = .15\n",
-    "# deg = 7\n",
-    "# anchor = \"mse\"\n",
-    "# spo_po_epochs = 0\n",
-    "# noise_width = 0.05\n",
-    "\n",
-    "# # Interdictor parameters\n",
-    "# benders_max_count = 50\n",
-    "# benders_eps = 1e-3\n",
-    "# lsd = 1e-5\n",
-    "\n",
-    "\n",
-    "\n",
     "# Initialize the configuration class\n",
     "cfg = HP()\n",
     "\n",
@@ -90,33 +60,7 @@
     "random.seed(cfg.get(\"random_seed\"))\n",
     "torch.manual_seed(cfg.get(\"random_seed\"))\n",
     "if torch.cuda.is_available():\n",
-    "    torch.cuda.manual_seed_all(cfg.get(\"random_seed\"))\n",
-    "\n",
-    "# # Change configuration parameters (optional)\n",
-    "# cfg.set(\"budget\", B)\n",
-    "# cfg.set(\"grid_size\", network)\n",
-    "# cfg.set(\"random_seed\", random_seed)\n",
-    "# cfg.set(\"intd_seed\", intd_seed)\n",
-    "# cfg.set(\"data_loader_seed\", data_loader_seed)\n",
-    "\n",
-    "# cfg.set(\"num_features\", num_features)\n",
-    "# cfg.set(\"num_train_samples\", num_train_samples)\n",
-    "# cfg.set(\"num_test_samples\", num_test_samples)\n",
-    "# cfg.set(\"validation_size\", validation_size)\n",
-    "# cfg.set(\"data_loader_batch_size\", data_loader_batch_size)\n",
-    "# cfg.set(\"po_epochs\", po_epochs)\n",
-    "# cfg.set(\"spo_epochs\", spo_epochs)\n",
-    "# cfg.set(\"spo_po_epochs\", spo_po_epochs)\n",
-    "# cfg.set(\"po_lr\", po_lr)\n",
-    "# cfg.set(\"spo_lr\", spo_lr)\n",
-    "# cfg.set(\"lam\", lam)\n",
-    "# cfg.set(\"anchor\", anchor)\n",
-    "# cfg.set(\"deg\", deg)\n",
-    "# cfg.set(\"noise_width\", noise_width)\n",
-    "\n",
-    "# cfg.set(\"benders_max_count\", benders_max_count)\n",
-    "# cfg.set(\"benders_eps\", benders_eps)\n",
-    "# cfg.set(\"lsd\", lsd)\n"
+    "    torch.cuda.manual_seed_all(cfg.get(\"random_seed\"))\n"
    ]
   },
   {
@@ -185,23 +129,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # TODO: - Plot cost/est. cost eror\n",
-    "# #       - Create example to see what costs look like here\n",
-    "# import pyepo\n",
-    "# print(f\"log_s parameter before Calibrator fitting: {spo_model.log_s.item()}\") \n",
-    "# calibration_trainer = CalibratorTrainer(spo_model)\n",
-    "# calibration_trainer.align_scale_ols(training_data['train_loader'])\n",
-    "# print(f\"log_s parameter after Calibrator fitting:  {spo_model.log_s.item()}\")\n",
-    "# print(f\"New SPO predictor regret:                  {pyepo.metric.regret(spo_model, opt_model, training_data['val_loader'])}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "from copy import deepcopy\n",
     "idx = 0\n",
     "cost = testing_data[\"costs\"][idx]*normalization_constant\n",
@@ -230,7 +157,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,15 +167,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
     "po_val = [(po - true) / true * 100 for po, true in zip(po_objs, true_objs)]\n",
     "spo_val = [(spo - true) / true * 100 for spo, true in zip(spo_objs, true_objs)]\n",
-    "\n",
-    "# plt.scatter(np.ones_like(po_objs), po_val)\n",
-    "# plt.scatter(np.ones_like(spo_objs) + 1, spo_val)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(6,4))\n",
     "\n",
@@ -279,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "13",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -314,7 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -396,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "14",
    "metadata": {},
    "source": [
     "# Debugging Bender's Decomposition!"
@@ -405,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -427,7 +351,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "17",
+   "id": "16",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -443,7 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -454,7 +378,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "18",
    "metadata": {},
    "source": [
     "# End of Debugging Bender's Decomposition"
@@ -463,7 +387,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +397,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -483,7 +407,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "22",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -493,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +427,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "24",
+   "id": "23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +438,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +449,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "26",
+   "id": "25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -536,7 +460,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -550,7 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28",
+   "id": "27",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,14 +483,6 @@
     "\n",
     "po_mean  = np.mean(po_vals)\n",
     "spo_mean = np.mean(spo_vals)\n",
-    "\n",
-    "# # std devs\n",
-    "# po_std_pop  = np.std(po_val, ddof=0)   # population σ\n",
-    "# po_std_samp = np.std(po_val, ddof=1)   # sample s (n-1)\n",
-    "# spo_std_pop  = np.std(spo_val, ddof=0)\n",
-    "# spo_std_samp = np.std(spo_val, ddof=1)\n",
-    "# mean_improvement = (po_mean - spo_mean) * 100 / po_mean\n",
-    "# std_improvement = (po_std_samp - spo_std_samp) * 100 / po_std_samp\n",
     "\n",
     "# Create figure\n",
     "fig, ax = plt.subplots(figsize=(6,4))\n",
@@ -592,7 +508,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "29",
+   "id": "28",
    "metadata": {},
    "source": [
     "Takeaway from above: If we post-process the trained cost predictor with SPO, we can achieve a better model and better interdiction (robust) performance!"
@@ -600,7 +516,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "30",
+   "id": "29",
    "metadata": {},
    "source": [
     "## Single Examples"
@@ -609,7 +525,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31",
+   "id": "30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -619,7 +535,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "32",
+   "id": "31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "33",
+   "id": "32",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -702,7 +618,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "34",
+   "id": "33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -733,89 +649,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "35",
+   "id": "34",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Estimated shortest paths after interdiction\n",
     "true_graph.visualize(colored_edges = y_est_true, dashed_edges=x_true, title=\"True Intd - Estimated Path\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "xon = np.array([4.2703, 3.9413, 4.0144, 3.8332, 4.7098, 5.4733, 5.0940, 4.2866, 4.6499, 4.6499])\n",
-    "print(f\"Oracle & no intd.: {xon.mean()} +/- {xon.std()}\")\n",
-    "xos = np.array([6.8659, 6.7464, 6.4299, 6.1716, 7.4298, 7.5481, 6.9647, 6.6544, 7.2118, 7.2118])\n",
-    "print(f\"Oracle & sym intd: {xos.mean()} +/- {xos.std()}\")\n",
-    "xoa = np.array([6.8728, 7.2865, 6.9242, 6.1716, 7.4298, 7.5481, 7.5056, 6.6649, 7.2118, 7.2118])\n",
-    "print(f\"Oracle & asym intd: {xoa.mean()} +/- {xoa.std()}\")\n",
-    "xpn = np.array([4.7798, 4.1016, 4.1909, 4.2144, 5.1734, 6.0128, 5.2856, 4.8201, 4.8097, 4.8097])\n",
-    "print(f\"PO & no intd: {xpn.mean()} +/- {xpn.std()}\")\n",
-    "xps = np.array([7.2351, 6.9740, 6.6728, 6.6493, 7.9041, 8.2390, 7.7915, 7.1620, 7.3979, 7.3979])\n",
-    "print(f\"PO & sym intd: {xps.mean()} +/- {xps.std()}\")\n",
-    "xpa = np.array([8.0121, 5.7358, 6.9242, 7.1088, 8.3745, 9.1074, 8.2071, 7.9188, 7.7143, 7.7143])\n",
-    "print(f\"PO & asym intd: {xpa.mean()} +/- {xpa.std()}\")\n",
-    "xsn = np.array([4.3636, 4.0688, 4.1207, 3.9578, 4.8607, 5.5872, 5.2111, 4.3534, 4.7325, 4.7325])\n",
-    "print(f\"SPO & no intd: {xsn.mean()} +/- {xsn.std()}\")\n",
-    "xss = np.array([7.4021, 7.1997, 6.7817, 6.6076, 7.9676, 7.9900, 8.0484, 7.2554, 7.6427, 7.6427])\n",
-    "print(f\"SPO & sym intd: {xss.mean()} +/- {xss.std()}\")\n",
-    "xsa = np.array([8.8781, 8.1814, 7.7326, 7.6505, 9.0112, 9.2008, 9.3887, 8.7232, 8.6073, 8.6073])\n",
-    "print(f\"SPO & asym intd: {xsa.mean()} +/- {xsa.std()}\")\n",
-    "xan = np.array([4.4482, 4.1223, 4.1533, 3.9876, 4.9809, 5.6577, 5.2432, 4.4143, 4.7514, 4.7514])\n",
-    "print(f\"adv SPO & no intd: {xan.mean()} +/- {xan.std()}\")\n",
-    "xas = np.array([7.1498, 7.0349, 6.6749, 6.4627, 7.7634, 7.8205, 7.8618, 7.0229, 7.4465, 7.4465])\n",
-    "print(f\"adv SPO & sym intd: {xas.mean()} +/- {xas.std()}\")\n",
-    "xaa = np.array([7.7773, 7.4520, 7.1286, 6.9911, 8.1931, 8.4785, 8.4053, 7.7172, 7.9356, 7.9356])\n",
-    "print(f\"adv SPO & asym intd: {xaa.mean()} +/- {xaa.std()}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "37",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xon"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "38",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "xon = 4.2703 + 3.9413 + 4.0144 + 3.8332 + 4.7098 + 5.4733 + 5.0940 + 4.2866 + 4.6499 + 4.6499\n",
-    "print(f\"Oracle & no intd.: {xon}\")\n",
-    "xos = 6.8659 + 6.7464 + 6.4299 + 6.1716 + 7.4298 + 7.5481 + 6.9647 + 6.6544 + 7.2118 + 7.2118\n",
-    "print(f\"Oracle & sym intd: {xos}\")\n",
-    "xoa = 6.8728 + 7.2865 + 6.9242 + 6.1716 + 7.4298 + 7.5481 + 7.5056 + 6.6649 + 7.2118 + 7.2118\n",
-    "print(f\"Oracle & asym intd: {xoa}\")\n",
-    "xpn = 4.7798 + 4.1016 + 4.1909 + 4.2144 + 5.1734 + 6.0128 + 5.2856 + 4.8201 + 4.8097 + 4.8097\n",
-    "print(f\"PO & no intd: {xpn}\")\n",
-    "xps = 7.2351 + 6.9740 + 6.6728 + 6.6493 + 7.9041 + 8.2390 + 7.7915 + 7.1620 + 7.3979 + 7.3979\n",
-    "print(f\"PO & sym intd: {xps}\")\n",
-    "xpa = 8.0121 + 5.7358 + 6.9242 + 7.1088 + 8.3745 + 9.1074 + 8.2071 + 7.9188 + 7.7143 + 7.7143\n",
-    "print(f\"PO & asym intd: {xpa}\")\n",
-    "xsn = 4.3636 + 4.0688 + 4.1207 + 3.9578 + 4.8607 + 5.5872 + 5.2111 + 4.3534 + 4.7325 + 4.7325\n",
-    "print(f\"SPO & no intd: {xsn}\")\n",
-    "xss = 7.4021 + 7.1997 + 6.7817 + 6.6076 + 7.9676 + 7.9900 + 8.0484 + 7.2554 + 7.6427 + 7.6427\n",
-    "print(f\"SPO & sym intd: {xss}\")\n",
-    "xsa = 8.8781 + 8.1814 + 7.7326 + 7.6505 + 9.0112 + 9.2008 + 9.3887 + 8.7232 + 8.6073 + 8.6073\n",
-    "print(f\"SPO & asym intd: {xsa}\")\n",
-    "xan = 4.4482 + 4.1223 + 4.1533 + 3.9876 + 4.9809 + 5.6577 + 5.2432 + 4.4143 + 4.7514 + 4.7514\n",
-    "print(f\"adv SPO & no intd: {xan}\")\n",
-    "xas = 7.1498 + 7.0349 + 6.6749 + 6.4627 + 7.7634 + 7.8205 + 7.8618 + 7.0229 + 7.4465 + 7.4465\n",
-    "print(f\"adv SPO & sym intd: {xas}\")\n",
-    "xaa = 7.7773 + 7.4520 + 7.1286 + 6.9911 + 8.1931 + 8.4785 + 8.4053 + 7.7172 + 7.9356 + 7.9356\n",
-    "print(f\"adv SPO & asym intd: {xaa}\")"
    ]
   }
  ],
